# school-architect

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
ai-agent/: .env.example  README.md  pyproject.toml  requirements.txt
ai-agent/school_architect/prompts/: system_prompt.txt
ai-agent/school_architect/tools/: definitions.json
backend/: .env.example  Dockerfile  README.md  pom.xml
backend/src/main/java/com/schoolarch/api/controllers/: AcademicBatchController.java  InstructionalOfferingController.java
backend/src/main/java/com/schoolarch/application/commands/: CommandResult.java  Commands.java
backend/src/main/java/com/schoolarch/application/handlers/: AddSectionCommandHandler.java  AssignStaffCommandHandler.java  ConfigureOfferingCommandHandler.java  CreateBatchCommandHandler.java  OpenRegistrationCommandHandler.java
backend/src/main/java/com/schoolarch/domain/aggregates/: AcademicBatch.java  InstructionalOffering.java  Section.java
backend/src/main/java/com/schoolarch/domain/errors/: DomainError.java
backend/src/main/java/com/schoolarch/domain/events/: DomainEvent.java  DomainEventPublisher.java
backend/src/main/java/com/schoolarch/domain/exceptions/: CapacityExceededException.java  SafetyViolationException.java
backend/src/main/resources/: application.properties
database/: README.md
database/schema/: 01-complete-schema.sql
database/scripts/: setup.sh
docs/: GETTING_STARTED.md
mobile/: App.tsx  README.md  package.json
(+2 files in other folders)
