[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "school-architect-agent"
version = "0.1.0"
description = "AI school configuration agent"
requires-python = ">=3.10"
dependencies = ["anthropic>=0.25.0", "pydantic>=2.0.0"]

[tool.black]
line-length = 100
